Fix Youtube video overflow on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -701,8 +701,6 @@ ol > ul {
 .video-container {
   top: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
   overflow: hidden;
 }
 .video-container .p .video {
